@@ -1,3 +1,8 @@
+2004-11-06  Sven de Marothy  <sven@physto.se>
+        
+	* java/awt/image/ConvolveOp.java: Added missing
+	copyright notice.
+
 2004-11-06  Robert Schuster  <theBohemian@gmx.net>
 
 	Fixes bug #10908
